# bi-python-uv-project-template

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  DEVELOP.md  Makefile  README.md  bi-python-project-template.code-workspace  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
binder/: postBuild
docs/: ASSUMPTIONS.md  DATA_GENERATION.md  DATA_SOURCES.md  DECISIONS_MEMO_TEMPLATE.md  LIMITATIONS.md  METHODS.md  METRIC_DEFINITIONS.md
tests/: test_placeholder.py
