[project]
name = "bi-python-project-template"
version = "0.1.0"
description = "A scaffolded data-science project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
]
notebooks = [
    "ipykernel>=6.29.0",
    "pandas>=3.0.1",
    "numpy>=2.4.2",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "plotly>=6.0.0",
    "requests>=2.32.0",
    "nbformat>=5.10.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
src = [
    "packages/**/src",
    "packages/**/tests",
    "apps/*/*.py",
    "apps/**/src",
    "apps/**/tests",
]
extend-exclude = [".history"]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
files = ["."]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
